@@ -1,4 +1,10 @@
-﻿zg 18.05.2016 19:37:11 +0200 - build 4678
+﻿drkns 19.05.2016 00:40:27 +0200 - build 4679
+
+1. Продолжение экспериментов с запускателем:
+   - тип запуска (консольный с ожиданием / тихий без ожидания) теперь определяется и для системных ассоциаций тоже.
+   - System.Executor.BatchType больше нет, всё должно корректно работать автоматически.
+
+zg 18.05.2016 19:37:11 +0200 - build 4678
 
 1. при определённых условиях позиция курсора в текущей строке после ECTL_DELETESTRING была неверной.
 
